--- a/gulimall-ware/src/main/resources/application.yml
+++ b/gulimall-ware/src/main/resources/application.yml
@@ -4,6 +4,12 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: gulimall-ware
 mybatis-plus:
   global-config:
     db-config:
