--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -15,5 +15,11 @@ spring:
           uri: https://www.qq.com
           predicates:
             - Query=url,qq
+        - id: admin-route
+          uri: lb://renren-fast
+          predicates:
+            - Path=/api/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/renren-fast/$\{segment}
   application:
     name: gulimall-gateway
