--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -83,6 +83,10 @@
             <artifactId>lombok</artifactId>
             <version>1.18.18</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
+        </dependency>
 
     </dependencies>
 
