--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+    alicloud:
+      access-key: LTAI5t79zQBcvqYcEeuKZsqg
+      secret-key: qdZy90xtgDs5g3QHxl47Lfca8GGYEy
+      oss:
+        endpoint: oss-cn-shanghai.aliyuncs.com
   application:
     name: gulimall-product
 mybatis-plus:
@@ -15,5 +20,8 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+      logic-delete-value: 0 #逻辑删除
+      logic-not-delete-value: 1 #逻辑生效
+      logic-delete-field: show_status
 server:
   port: 10000
