--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -246,6 +246,11 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
+			<version>2.1.0.RELEASE</version>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
