--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -83,8 +83,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.18</version>
         </dependency>
-
-
+        <!--校验功能-->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
